Updated charts on the main page.
